<resources>
    <string name="app_name" translatable="false">TabataTimer</string>
    <string name="sequences">Sequences</string>
    <string name="settings">Settings</string>
    <string name="add">Add</string>
    <string name="_1" translatable="false">1</string>
    <string name="_0" translatable="false">0</string>
    <string name="submit">Submit</string>
    <string name="title">Title</string>
    <string name="preparation">Preparation</string>
    <string name="workout">Workout</string>
    <string name="rest">Rest</string>
    <string name="cycles">Cycles</string>
    <string name="pattern">Pattern</string>
    <string name="start">Start</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cycles_max">99</string>
    <string name="time_limit" translatable="false">3600</string>
    <string name="time_limit_prep" translatable="false">60</string>
    <string name="change_timers">Change timers</string>
    <string name="colour">Colour</string>
    <string name="cycles_count">%d/%d cycles</string>
    <string name="finished">Finished!</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="play">Play</string>
    <string name="splash">TabataTimer</string>
    <string name="night_mode">Night mode</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="clear_data_dialog_message">WARNING: All user data is going to be cleared. Application will be stopped</string>
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="language">Language</string>
    <string name="font_size">Font size</string>
    <string name="clear_app_data">Clear application data</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="enter_title">Enter title</string>

    <string-array name="colours">
        <item>@string/blue</item>
        <item>@string/red</item>
        <item>@string/green</item>
    </string-array>

    <string-array name="locale_entries">
        <item>English</item>
        <item>Русский</item>
    </string-array>

    <string-array name="locale_values">
        <item>en</item>
        <item>ru</item>
    </string-array>

    <string-array name="font_size_entries">
        <item>@string/small</item>
        <item>@string/medium</item>
        <item>@string/large</item>
    </string-array>

    <string-array name="font_size_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

</resources>