<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SequenceDetailFragment">

    <EditText
        android:id="@+id/sequence_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="title"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <Spinner
        android:id="@+id/sequence_colour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/sequence_title_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.20" />

    <EditText
        android:id="@+id/sequence_preparation_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="number"
        android:ems="10"
        android:hint="@string/_1"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <EditText
        android:id="@+id/sequence_workout_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="number"
        android:ems="10"
        android:hint="@string/_1"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.50" />

    <EditText
        android:id="@+id/sequence_rest_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="number"
        android:ems="10"
        android:hint="@string/_1"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />

    <EditText
        android:id="@+id/sequence_cycles_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="number"
        android:ems="10"
        android:hint="@string/_1"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.80" />

    <Button
        android:id="@+id/sequence_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <TextView
        android:id="@+id/sequence_title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        app:layout_constraintBottom_toTopOf="@+id/sequence_title_text"
        app:layout_constraintStart_toStartOf="@+id/sequence_title_text" />

    <TextView
        android:id="@+id/sequence_colour_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colour"
        app:layout_constraintBottom_toTopOf="@+id/sequence_colour"
        app:layout_constraintStart_toStartOf="@+id/sequence_colour" />

    <TextView
        android:id="@+id/sequence_preparation_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preparation"
        app:layout_constraintBottom_toTopOf="@+id/sequence_preparation_text"
        app:layout_constraintStart_toStartOf="@+id/sequence_preparation_text" />

    <TextView
        android:id="@+id/sequence_workout_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/workout"
        app:layout_constraintBottom_toTopOf="@+id/sequence_workout_text"
        app:layout_constraintStart_toStartOf="@+id/sequence_workout_text" />

    <TextView
        android:id="@+id/sequence_rest_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rest"
        app:layout_constraintBottom_toTopOf="@+id/sequence_rest_text"
        app:layout_constraintStart_toStartOf="@+id/sequence_rest_text" />

    <TextView
        android:id="@+id/sequence_cycles_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cycles"
        app:layout_constraintBottom_toTopOf="@+id/sequence_cycles_text"
        app:layout_constraintStart_toStartOf="@+id/sequence_cycles_text" />

</androidx.constraintlayout.widget.ConstraintLayout>