<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TimerDetailFragment">

    <EditText
        android:id="@+id/timer_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:autofillHints="title"
        android:hint="@string/title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"
        />

    <EditText
        android:id="@+id/timer_preparation_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="number"
        android:ems="10"
        android:hint="@string/_1"
        android:inputType="number"
        android:text="@string/_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.30"
        />

    <EditText
        android:id="@+id/timer_workout_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="number"
        android:ems="10"
        android:hint="@string/_1"
        android:inputType="number"
        android:text="@string/_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45"
        />

    <EditText
        android:id="@+id/timer_rest_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="number"
        android:ems="10"
        android:hint="@string/_1"
        android:inputType="number"
        android:text="@string/_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.60"
        />

    <EditText
        android:id="@+id/timer_cycles_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="number"
        android:ems="10"
        android:hint="@string/_1"
        android:inputType="number"
        android:text="@string/_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75"
        />

</androidx.constraintlayout.widget.ConstraintLayout>